kube/catalog-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: widecart
  name: catalog
spec:
  type: NodePort
  selector:
    app: catalog
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 31000
